--- a/php/public/Admin/css/style2.css
+++ b/php/public/Admin/css/style2.css
@@ -8,7 +8,7 @@ a:hover{	color:#f00;	}
 .clearfix {   zoom:1;	}
 .hide{	display:none;	}
 .radius1{	border-radius:6px;	}
-aabody{	abackground:#f7f8fa;	font-size:100%;	font-family:"Microsoft YaHei",SimSun,Arial; amin-width:1180px;	color:#333;	
+body{	abackground:#f7f8fa;	font-size:100%;	font-family:"Microsoft YaHei",SimSun,Arial; amin-width:1180px;	color:#333;	
 	abackground:#ace;	}
 input{	color:#666;	}
 
@@ -178,24 +178,86 @@ table.table_in1 thead th, table.table_in1 thead td{		padding:0 0px;		}
 
 /*	网络媒体_新闻任务	*/
 .w95{	width:95%;	margin:40px auto 0;	padding:0 0 66px;	}
+.sbox_1{		margin:40px 2.5% 0;	}
+.sbox_1_w{		border:1px solid #E5E5E5;	border-radius:6px;		}
+.sbox_1_item{		height:73px;	aline-height:74px;	border-bottom:1px dashed #E5E5E5;	font-size:14px;	color:#333333;	overflow:hidden;		}
+.sbox_1_item .l{	awidth:10%;	width:120px;	float:left;		background:#F7F8FA;	height:73px;	}
+.sbox_1_item .l strong{		float:left;		height:25px;	line-height:25px;	margin:23px 0 23px 20px;	font-weight:400;	amin-width:4em;	}
+.sbox_1_item .m{	awidth:83.3%;	afloat:left;	background:#FFFFFF;	
+	display:block;	margin-right:90px;	margin-left:120px;	}
+.sbox_1_item:last-child{	border-bottom:none;	}
+.sbox_1_item .m ul{		float:left;	margin:23px 0 23px 23px;	height:25px;	overflow:hidden;	}
+.sbox_1_item .m ul li{	float:left;	margin:0 2px 1px 0;	}
+.sbox_1_item .m ul li a{	float:left;		height:25px;	line-height:25px;	padding:0 10px;	color:#333;	background:#fff;	border-radius:3px;	}
+.sbox_1_item .m ul li a.cur{	color:#fff;	background:#2D9FDD;	}
+.sbox_1_item .r{	awidth:6.7%;	float:right;	display:inline-block;	margin:0 20px 0 10px;	}
+.sbox_1_item .r a{	margin:24px 0 0 0;	width:60px;	height:22px;	line-height:22px;	float:left;	background:url(/images/more1.gif) no-repeat 0 0 #fff;
+	font-size:12px;	color:#999999;	text-indent:10px;	}
+.sbox_1_b{		width:128px;	height:28px;	line-height:28px;	border:1px solid #E5E5E5;	border-top:1px solid #fff;	margin:0 auto;	text-align:center;
+	position:relative;	top:-1px;	z-index:10;		font-size:14px;	color:#6e7991;	}
+.sbox_1_b i{	background:url(/images/sub3.png) no-repeat center center #fff;	float:left;	width:17px;	height:17px;	margin:6px 0 0 20px;	}
+.sbox_1_b strong{	float:left;	margin-left:15px;	font-weight:400;	}
 
+.sbox_2{	background:#F7F8FA;	margin:20px 2.5% 0;	border:1px solid #E5E5E5;	aheight:39px;	line-height:39px;	font-size:14px;		}
+.sbox_2 .l{		float:left;		color:#333333;	font-weight:400;	margin:0 0 0 20px;	}
+.sbox_2 .m{		afloat:left;		margin-left:10px;
+	display:block;	margin-left:80px;	}
+.sbox_2 .m li{	float:left;		margin:7px 5px 0 0;	}
+.sbox_2 .m li a{	float:left;	height:25px;	line-height:25px;	padding:0 30px 0 10px;	color:#fff;	background:url(/images/del1.png) no-repeat 88% 9px #2D9FDD;
+	border-radius:3px;}
+.sbox_2 .r{		float:right;	margin:0 20px 0 5px;	}
+.sbox_2 .r b{	color:#ff0000;	font-weight:400;	}
 
+.sbox_3{	margin:60px 2.5% 0;	}
+.sbox_3 h4{		height:28px;	line-height:28px;	font-size:14px;	font-weight:400;	}
+.sbox_3 h4 strong.l{	float:left;	font-weight:400;	}
+.sbox_3 h4 strong.l b{	font-weight:400;	color:#ff0000;	}
+.sbox_3 h4 span.r{	float:right;	}
+.sbox_3 h4 span.r select{	margin:0 5px;	}
+.sbox_3_table{	margin-top:8px;	color:#333;	}
+.sbox_3_table table{	line-height:20px;	}
+.sbox_3_table table tr{	border-bottom:1px dashed #E6E6E6;	}
+.sbox_3_table table thead{	background:#F7F8FA;	border:1px solid #e5e5e5;	height:38px;	line-height:38px;	}
+.sbox_3_table table th{		font-weight:400;	text-align:center;	vertical-align:middle;	font-size:14px;		color:#333;	}
+.sbox_3_table table td{		font-weight:400;	text-align:center;	vertical-align:middle;	padding:30px 0;	}
+td.sbox_3_t1{	font-size:16px;		}
+td.sbox_3_t2{		font-size:14px;	}
+td.sbox_3_t3{		font-size:14px;	}
+td.sbox_3_t4{		font-size:14px;		width:16%;	}
+.sbox_3_t5{			}
+td.sbox_3_t6,td.sbox_3_t7,td.sbox_3_t8{	color:#f00;		font-size:16px;	}
+.sbox_3_b{		width:120px;	height:28px;	line-height:28px;	color:#333;	font-size:14px;	margin:20px auto 0;	text-align:center;	}
+.sbox_3_b .more{	float:left;	width:120px;	height:28px;	line-height:28px;		background:#EEEEEE;	border:1px solid #E6E6E6;	border-radius:30px;		}
 
+.sbox_4{		}
+.sbox_4 .WIn2{		margin:45px 2.5% 0;	width:auto;	}
+.sbox_4 .WIn2 h2{	font-size:18px;		font-weight:400;	margin-top:0;	border-bottom:1px solid #D9E1EB;	}
+.sbox_4 .WIn2 table{	margin-top:1px;		}
+.sbox_4 .WIn2 table tr{	background:#fff;	}
+.sbox_4 .WIn2 table tr:nth-child(odd){	background:#f9f9f9;	}
+.sbox_4 .WIn2 table tr:first-child{		background:#f2f2f2;	}
+.sbox_4 .WIn2 table td{		font-size:14px;	}
+.sbox_4 .WIn2 .WIna8{	font-size:22px;	}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.sbox_5 .WIn2{		margin:30px 2.5% 0;	width:auto;	}
+.sbox_5 .WIn2 h2{	font-size:18px;		font-weight:400;	margin-top:0;	border-bottom:1px solid #D9E1EB;	}
+.sbox_5 .WIn2 .WMain1{	width:auto;	border-radius:5px;	}
+.sbox_5 .WMain3 p{	width:115px;		}
+.sbox_5 .WIFN1{		width:55%;		}
+.sbox_5 .WMain3{	margin:16px auto;	width:100%;	}
+.sbox_5 .WMain3 label{	margin-right:18px;	}
+.sbox_5 .WMain3 label input{	position:relative;	top:1px;	margin-right:6px;	}
+.sbox_5 .WMain3_1{		width:100%;	}
+.sbox_5 .WMain3_1>div{	display:block;	margin-left:115px;	margin-right:12px;	position:relative;	}
+.sbox_5 .WMain3_1>div input{	display:block;	float:none;	width:100%;	}
+.sbox_5 .WMain3_1>div textarea{	display:block;	float:none;	width:100%;	}
+.sbox_5 .WMain3_1>div p{	float:right;	width:auto;		width:100%;	text-align:right;	position:absolute;	left:12px;	font-size:12px;	}
+.sbox_5 .WMain3_1>div p b{	color:#f00;	font-weight:400;	}
+.sbox_5 .WMain3_2{		}
+.sbox_5 .txt2{	border:1px solid #ccc;	height:30px;	line-height:30px;	margin:0;	width:150px;	background:url(../images/ico_date.png) no-repeat 136px center #fff;	}
+.sbox_5 select{	border:1px solid #ccc;	height:30px;	line-height:30px;	margin:0 6px;	width:50px;	text-align:center;	text-indent:6px;	}
+.sbox_5 .WMain3_2 span{		color:#999999;	font-size:14px;	margin-left:10px;	}
+.sbox_5 select option{		}
 
 
 
