--- a/php/public/Admin/css/style2.css
+++ b/php/public/Admin/css/style2.css
@@ -59,7 +59,7 @@ input{	color:#666;	}
 .w_txt1{	adisplay:inline-block;	margin-right:114px;	overflow:hidden;	min-width:50px;	}
 .txt1{		width:840px;		height:55px;	line-height:57px;	float:left;	border:none;	padding:0 20px;	margin:0;	font-size:16px;	color:#999999;
 	border:1px solid #C1C1C1;	border-right:none;	border-radius:6px 0 0 6px;	outline:none;
-	background:url(/images/sub1.png) no-repeat right 13px top 18px;
+	background:url(../images/sub1.png) no-repeat right 13px top 18px;
 	float:none;	display:block;	width:96%;	padding:0 2%;	atext-indent:20px;	}
 .sub1{		width:114px;	height:57px;	line-height:57px;	float:left;	text-align:center;	font-size:20px;	color:#fff;	
 	border-radius:0 6px 6px 0;	border:none;	background:#FF4A50;	cursor:pointer;	
@@ -208,11 +208,11 @@ aatable.dataTable{	border-collapse:collapse;	}
 .sbox_1_item .m ul li a{	float:left;		height:25px;	line-height:25px;	padding:0 10px;	color:#333;	background:#fff;	border-radius:3px;	}
 .sbox_1_item .m ul li a.cur{	color:#fff;	background:#2D9FDD;	}
 .sbox_1_item .r{	awidth:6.7%;	float:right;	display:inline-block;	margin:0 20px 0 10px;	}
-.sbox_1_item .r a{	margin:24px 0 0 0;	width:60px;	height:22px;	line-height:22px;	float:left;	background:url(/images/more1.gif) no-repeat 0 0 #fff;
+.sbox_1_item .r a{	margin:24px 0 0 0;	width:60px;	height:22px;	line-height:22px;	float:left;	background:url(../images/more1.gif) no-repeat 0 0 #fff;
 	font-size:12px;	color:#999999;	text-indent:10px;	}
 .sbox_1_b{		width:128px;	height:28px;	line-height:28px;	border:1px solid #E5E5E5;	border-top:1px solid #fff;	margin:0 auto;	text-align:center;
 	position:relative;	top:-1px;	z-index:10;		font-size:14px;	color:#6e7991;	}
-.sbox_1_b i{	background:url(/images/sub3.png) no-repeat center center #fff;	float:left;	width:17px;	height:17px;	margin:6px 0 0 20px;	}
+.sbox_1_b i{	background:url(../images/sub3.png) no-repeat center center #fff;	float:left;	width:17px;	height:17px;	margin:6px 0 0 20px;	}
 .sbox_1_b strong{	float:left;	margin-left:15px;	font-weight:400;	}
 
 /*	2017.2.20 改	*/
@@ -222,8 +222,8 @@ aatable.dataTable{	border-collapse:collapse;	}
 .sbox_1_item .m ul li.add a{	position:relative;	color:#fff;	background:#2D9FDD;	padding:0 10px 0 10px;	}
 .sbox_1_item .m ul li a i.del{	font-style:normal;	position:absolute;	right:1px;	top:1px;	display:block;	text-align:center;	font-size:10px;
 	width:10px;	height:10px;	line-height:10px;
-	background:url(/images/del2.png) no-repeat center center;	overflow:hidden;	color:#ff0;	}
-.sbox_1_item .m ul li a.cur i.del{	background:url(/images/del1.png) no-repeat center center;	}
+	background:url(../images/del2.png) no-repeat center center;	overflow:hidden;	color:#ff0;	}
+.sbox_1_item .m ul li a.cur i.del{	background:url(../images/del1.png) no-repeat center center;	}
 
 .sbox_2 .m li a i{	display:none;	}
 
