--- a/php/public/Admin/css/style2.css
+++ b/php/public/Admin/css/style2.css
@@ -59,7 +59,7 @@ input{	color:#666;	}
 .w_txt1{	adisplay:inline-block;	margin-right:114px;	overflow:hidden;	min-width:50px;	}
 .txt1{		width:840px;		height:55px;	line-height:57px;	float:left;	border:none;	padding:0 20px;	margin:0;	font-size:16px;	color:#999999;
 	border:1px solid #C1C1C1;	border-right:none;	border-radius:6px 0 0 6px;	outline:none;
-	background:url(../images/sub1.png) no-repeat right 13px top 18px;
+	background:url(/images/sub1.png) no-repeat right 13px top 18px;
 	float:none;	display:block;	width:96%;	padding:0 2%;	atext-indent:20px;	}
 .sub1{		width:114px;	height:57px;	line-height:57px;	float:left;	text-align:center;	font-size:20px;	color:#fff;	
 	border-radius:0 6px 6px 0;	border:none;	background:#FF4A50;	cursor:pointer;	
@@ -208,11 +208,11 @@ aatable.dataTable{	border-collapse:collapse;	}
 .sbox_1_item .m ul li a{	float:left;		height:25px;	line-height:25px;	padding:0 10px;	color:#333;	background:#fff;	border-radius:3px;	}
 .sbox_1_item .m ul li a.cur{	color:#fff;	background:#2D9FDD;	}
 .sbox_1_item .r{	awidth:6.7%;	float:right;	display:inline-block;	margin:0 20px 0 10px;	}
-.sbox_1_item .r a{	margin:24px 0 0 0;	width:60px;	height:22px;	line-height:22px;	float:left;	background:url(../images/more1.gif) no-repeat 0 0 #fff;
+.sbox_1_item .r a{	margin:24px 0 0 0;	width:60px;	height:22px;	line-height:22px;	float:left;	background:url(/images/more1.gif) no-repeat 0 0 #fff;
 	font-size:12px;	color:#999999;	text-indent:10px;	}
 .sbox_1_b{		width:128px;	height:28px;	line-height:28px;	border:1px solid #E5E5E5;	border-top:1px solid #fff;	margin:0 auto;	text-align:center;
 	position:relative;	top:-1px;	z-index:10;		font-size:14px;	color:#6e7991;	}
-.sbox_1_b i{	background:url(../images/sub3.png) no-repeat center center #fff;	float:left;	width:17px;	height:17px;	margin:6px 0 0 20px;	}
+.sbox_1_b i{	background:url(/images/sub3.png) no-repeat center center #fff;	float:left;	width:17px;	height:17px;	margin:6px 0 0 20px;	}
 .sbox_1_b strong{	float:left;	margin-left:15px;	font-weight:400;	}
 
 /*	2017.2.20 改	*/
@@ -222,8 +222,8 @@ aatable.dataTable{	border-collapse:collapse;	}
 .sbox_1_item .m ul li.add a{	position:relative;	color:#fff;	background:#2D9FDD;	padding:0 10px 0 10px;	}
 .sbox_1_item .m ul li a i.del{	font-style:normal;	position:absolute;	right:1px;	top:1px;	display:block;	text-align:center;	font-size:10px;
 	width:10px;	height:10px;	line-height:10px;
-	background:url(../images/del2.png) no-repeat center center;	overflow:hidden;	color:#ff0;	}
-.sbox_1_item .m ul li a.cur i.del{	background:url(../images/del1.png) no-repeat center center;	}
+	background:url(/images/del2.png) no-repeat center center;	overflow:hidden;	color:#ff0;	}
+.sbox_1_item .m ul li a.cur i.del{	background:url(/images/del1.png) no-repeat center center;	}
 
 .sbox_2 .m li a i{	display:none;	}
 
@@ -233,7 +233,7 @@ aatable.dataTable{	border-collapse:collapse;	}
 .sbox_2 .m{		afloat:left;		margin-left:10px;	display:block;	margin-left:80px;	}
 .sbox_2 .m li{	float:left;		margin:7px 5px 0 0;	}
 .sbox_2 .m li a{	float:left;	height:25px;	line-height:25px;	padding:0 30px 0 10px;	color:#fff;
-	background:url(../images/del1.png) no-repeat 88% 9px #2D9FDD;	border-radius:3px;}
+	background:url(/images/del1.png) no-repeat 88% 9px #2D9FDD;	border-radius:3px;}
 .sbox_2 .r{		float:right;	margin:0 20px 0 5px;	}
 .sbox_2 .r b{	color:#ff0000;	font-weight:400;	}
 
@@ -249,19 +249,14 @@ aatable.dataTable{	border-collapse:collapse;	}
 .sbox_3_table table thead{	background:#F7F8FA;	border:1px solid #e5e5e5;	height:38px;	line-height:38px;	}
 .sbox_3_table table th{		font-weight:400;	text-align:center;	vertical-align:middle;	font-size:14px;		color:#333;	}
 .sbox_3_table table td{		font-weight:400;	text-align:center;	vertical-align:middle;	padding:25px 0;	}
-
 td.sbox_3_t1{	font-size:16px;		}
-td.sbox_3_t2{	font-size:14px;	}
-td.sbox_3_t3{	font-size:14px;	}
-td.sbox_3_t4{	font-size:14px;		width:16%;	}
+td.sbox_3_t2{		font-size:14px;	}
+td.sbox_3_t3{		font-size:14px;	}
+td.sbox_3_t4{		font-size:14px;		width:16%;	}
 .sbox_3_t5{			}
-.sbox_3_table table td.red{		color:#f00;	font-size:16px;	}
+td.sbox_3_t6,td.sbox_3_t7,td.sbox_3_t8{	color:#f00;		font-size:16px;	}
 .sbox_3_b{		width:120px;	height:28px;	line-height:28px;	color:#333;	font-size:14px;	margin:20px auto 0;	text-align:center;	}
 .sbox_3_b .more{	float:left;	width:120px;	height:28px;	line-height:28px;		background:#EEEEEE;	border:1px solid #E6E6E6;	border-radius:30px;		}
-
-.sbox_3_table table tr.choose{	background:#3d6983;	}
-.sbox_3_table table tr.choose td{	color:#fff;	}
-.sbox_3_table table tr.choose td.color{		color:#f00;	}
 
 .sbox_4{		}
 .sbox_4 .WIn2{		margin:45px 2.5% 0;	width:auto;	}
@@ -293,21 +288,10 @@ select.sel_t1{	border:1px solid #ccc;	height:32px;	line-height:32px;	margin:0 6p
 select.sel_t1 option{		}
 .sbox_5 .WMain3_2>span{		color:#999999;	font-size:14px;	margin-left:10px;	}
 .btn_sub_w{		padding:40px 0 20px;	text-align:center;		}
-.btn_sub{		display:block;	border:none;	cursor:pointer;		margin:0 auto;	width:250px;	height:60px;	background:url(../img/WLButton.png) no-repeat center center;	}
-.btn_sub_w .notagree{	background:url(../images/WLButton_2.png) no-repeat center center;	cursor:default;	}
+.btn_sub{		background:none;	border:none;	cursor:pointer;	}
 
 .sbox_5 .WMain3 p{	width:100px;	text-align:right;	padding-right:45px;	}
 .sbox_5 .WMain3_1>div{	margin-left:145px;	}
-
-.sbox_5 .WMain3{	position:relative;	}
-em.error,
-.err_tip{	color:#f00;	padding:0 0 0 10px;	afloat:right;	font-style:normal;	}
-em#agree-error{		position:absolute;	top:20px;	left:152px;	}
-body .sbox_5 .WMain3 .time1-error,
-body .sbox_5 .WMain3 .time2-error{	color:#f00;		}
-#datepicker1-error,
-#datepicker2-error{	display:none!important;		}
-
 
 /*	问答任务列表	*/
 table.table_in1_2{	margin:0 auto;	border-left:1px solid #F2F2F2;	border-right:1px solid #F2F2F2;	}
@@ -363,7 +347,7 @@ select.sel_2{	border:1px solid #E5E5E5;	border-radius:5px;	height:30px;	line-hei
 .left_div .txt6{	width:43%;	}
 .left_div .tarea_1{	width:92%;		}
 .left_div span{		margin-right:15px;	}
-#right_pic{		abackground:url(../images/phone.jpg) no-repeat 0 0;	width:218px;	width:23%;	aheight:470px;	float:right;	margin-top:15px;
+#right_pic{		abackground:url(/images/phone.jpg) no-repeat 0 0;	width:218px;	width:23%;	aheight:470px;	float:right;	margin-top:15px;
 	background-size:contain;	margin-bottom:25px;	}
 #right_pic img{	width:100%;	height:auto;	max-width:218px;	float:right;	}
 
@@ -387,7 +371,7 @@ select.sel_2{	border:1px solid #E5E5E5;	border-radius:5px;	height:30px;	line-hei
 
 /*	秒拍任务_搜索到顶	*/
 .sub1_2{	font-size:16px;	}
-.ndt_mps{	margin-top:-10px;	background:url(../images/bg_line2.gif) repeat-x 0 0 #fff;	}
+.ndt_mps{	margin-top:-10px;	background:url(/images/bg_line2.gif) repeat-x 0 0 #fff;	}
 .mps{		font-size:14px;	padding:16px 30px 0;	}
 .mps_t{		background:#F7F8FA;	border:1px solid #e5e5e5;	padding:6px 10px;	line-height:26px;	}
 .mps_t label{		margin-right:10px;	}
@@ -396,7 +380,7 @@ select.sel_2{	border:1px solid #E5E5E5;	border-radius:5px;	height:30px;	line-hei
 .mps_t .r{			float:right;	}
 .mps_t .r span{	float:left;	margin-right:1px;	line-height:24px;	cursor:pointer;	}
 .mps_t .r span.sp1{		border:1px solid #ccc;	padding:0px 10px;	background:#fff;	font-size:12px;	}
-.mps_t .r span.sp2{		border:1px solid #ccc;	padding:0px 30px 0 10px;	font-size:12px;	background:url(../images/arr2.gif) no-repeat right 9px center #fff;	}
+.mps_t .r span.sp2{		border:1px solid #ccc;	padding:0px 30px 0 10px;	font-size:12px;	background:url(/images/arr2.gif) no-repeat right 9px center #fff;	}
 
 .mps_m{		margin-top:0px;	background:#fff;	}
 .mps_item{		padding:30px 0;	border-bottom:1px dotted #E6E6E6;		}
@@ -473,7 +457,7 @@ td.sbox_3_t1 img{	margin-right:5px;	}
 
 /*	媒体供应商_添加资源	*/
 ul.add_resource{		margin:23px 0 0 25px;	float:left;	}
-ul.add_resource li{		background:url(../images/arr_add.gif) no-repeat left 0 #2c9fdd;	float:left;	margin:0 10px 5px 0;	height:30px;	border-radius:5px;	}
+ul.add_resource li{		background:url(/images/arr_add.gif) no-repeat left 0 #2c9fdd;	float:left;	margin:0 10px 5px 0;	height:30px;	border-radius:5px;	}
 ul.add_resource li a{	font-size:14px;	font-weight:400;	color:#ffffff;	height:30px;	line-height:30px;	float:left;	padding:0 20px 0 50px;	}
 .tab1 strong.l{		float:left;	font-size:18px;	color:#333;	font-weight:700;	line-height:54px;	padding:0 30px;	}
 .search_3{	font-size:14px;	height:30px;	line-height:30px;	margin:12px 10px 10px 0px;	display:block;	padding-top:0px;	float:right;	}
@@ -484,7 +468,7 @@ ul.add_resource li a{	font-size:14px;	font-weight:400;	color:#ffffff;	height:30p
 .float_serv{	background:#fff;	position:fixed;	right:-1px;	top:140px;	width:50px;	min-height:50px;	border:1px solid #CCCCCC;	z-index:1000;	}
 .float_serv ul{		}
 .float_serv ul li{		float:left;	width:50px;	height:50px;	border-top:1px solid #ccc;	}
-.float_serv ul li a{	float:left;	width:50px;	height:50px;	background-image:url(../images/bg_serv.gif);	}
+.float_serv ul li a{	float:left;	width:50px;	height:50px;	background-image:url(/images/bg_serv.gif);	}
 .float_serv ul li.serv_1{	border-top:none;		}
 .float_serv ul li.serv_1 a{	abackground-position:0 0px;		}
 .float_serv ul li.serv_2 a{	background-position:0 -54px;	}
@@ -505,7 +489,7 @@ a.txt9_2{	background:#2C9FDD;		margin-left:10px;	}
 .table_in1{	margin-left:0;	margin-right:0;	}
 .distable thead tr{	border-bottom:1px solid #F2F2F2;	}
 .distable tbody tr{	border:1px solid #F2F2F2;	}
-.distable th{	background:url(../images/bg_line3.gif) repeat-x 0 0;		}
+.distable th{	background:url(/images/bg_line3.gif) repeat-x 0 0;		}
 
 /*	订单支付	*/
 .table_in1 td.alignleft{		text-align:left;	padding:0 30px;	}
@@ -580,8 +564,8 @@ ul.ul_table1 li span.sp1{	width:10%;	margin-left:5%;	text-align:left;	color:#333
 ul.ul_table1 li span.sp2{	width:50%;	margin-left:5%;	font-size:12px;	color:#999999;	padding-bottom:8px;	}
 ul.ul_table1 li span.sp3{	width:10%;	margin-left:8%;	text-align:left;	color:#02ac0a;	}
 	ul.ul_table1 li span.sp3 i{			font-style:normal;	display:block;	}
-	ul.ul_table1 li span.sp3 i.ok{		color:#02ac0a;	background:url(../images/ok.png) no-repeat 0 3px;		text-indent:25px;	}
-	ul.ul_table1 li span.sp3 i.not-ok{	color:#ff5a00;	background:url(../images/notok.png) no-repeat 0 3px;	text-indent:25px;	}
+	ul.ul_table1 li span.sp3 i.ok{		color:#02ac0a;	background:url(/images/ok.png) no-repeat 0 3px;		text-indent:25px;	}
+	ul.ul_table1 li span.sp3 i.not-ok{	color:#ff5a00;	background:url(/images/notok.png) no-repeat 0 3px;	text-indent:25px;	}
 ul.ul_table1 li span.sp4{	width:6%;	margin-left:3%;	margin-right:3%;	float:right;	text-align:left;	color:#999;	}
 
 /*	个人-安全设置-邮箱	*/
@@ -614,8 +598,8 @@ ul.ul_table1 li span.sp4{	width:6%;	margin-left:3%;	margin-right:3%;	float:right
 
 .sbox_1_item:first-child{	border-radius:6px 6px 0 0;	}
 .sbox_1_item:last-child{	border-radius:0 0 6px 6px;	}
-.sbox_1_item{	background:url(../images/bg_sbox_1_item.gif) repeat-y 0 0 #fff;}
-.sbox_1_item_showall{	height:auto;	background:url(../images/bg_sbox_1_item.gif) repeat-y 0 0 #fff;}
+.sbox_1_item{	background:url(/images/bg_sbox_1_item.gif) repeat-y 0 0 #fff;}
+.sbox_1_item_showall{	height:auto;	background:url(/images/bg_sbox_1_item.gif) repeat-y 0 0 #fff;}
 .sbox_1_item_showall .m{	margin-right:0;	}
 .sbox_1_item_showall .m ul{	height:auto;	}
 
@@ -651,7 +635,7 @@ table.table_row6{	width:100%;		margin:1px 1px 0;	background:#fff;	}
 .sbox_2_2 .m li a{	float:left;	height:24px;	line-height:24px;	padding:0 12px 0 12px;	color:#333;	background:#fff;	border:1px solid #CCCCCC;
 	margin-left:-1px;	}
 .sbox_2_2 .m li a.cur{	color:#fff;	padding:0 15px 0 10px;	border:1px solid #FF4150;
-	background:url(../images/order1.png) no-repeat right center #FF4A50;	}
+	background:url(/images/order1.png) no-repeat right center #FF4A50;	}
 .sbox_2_2 .r{		float:right;	margin:7px 10px 7px 5px;	}
 .sbox_2_2 .r b{		color:#ff0000;	font-weight:400;	}
 .search{		}
